# Eclipse-ROS2-Sims

./: README.md  test_drive.py
install/: local_setup.sh  setup.sh
install/eclipse_ackermann/lib/eclipse_ackermann/: pose_to_odom.py  pure_pursuit_ackermann.py
install/eclipse_ackermann/share/eclipse_ackermann/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eclipse_ackermann/share/eclipse_ackermann/cmake/: eclipse_ackermannConfig.cmake
install/eclipse_ackermann/share/eclipse_ackermann/urdf/: eclipse_ackermann.sdf  eclipse_ackermann.urdf
install/eclipse_diffdrive/lib/eclipse_diffdrive/: drive_forward.py  lateral_pid.py  move_to_point.py  pure_pursuit.py  turn_pid.py
install/eclipse_diffdrive/share/ament_index/resource_index/package_run_dependencies/: eclipse_diffdrive
install/eclipse_diffdrive/share/ament_index/resource_index/parent_prefix_path/: eclipse_diffdrive
install/eclipse_diffdrive/share/eclipse_diffdrive/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/eclipse_diffdrive/share/eclipse_diffdrive/config/: diffdrive_controller.yaml
install/eclipse_diffdrive/share/eclipse_diffdrive/urdf/: eclipse_diffdrive.sdf  eclipse_diffdrive.urdf
log/: latest_build
src/eclipse_ackermann/: CMakeLists.txt  package.xml
src/eclipse_ackermann/launch/: sim.launch.py
src/eclipse_ackermann/src/: pure_pursuit_ackermann.py
src/eclipse_ackermann/urdf/: eclipse_ackermann.urdf.xacro
src/eclipse_diffdrive/: CMakeLists.txt  sim.launch.py
src/eclipse_diffdrive/install/: local_setup.sh  setup.sh
src/eclipse_diffdrive/install/eclipse_diffdrive/share/eclipse_diffdrive/: package.sh  package.xml
src/eclipse_diffdrive/install/eclipse_diffdrive/share/eclipse_diffdrive/launch/: sim.launch.py
src/eclipse_diffdrive/install/eclipse_diffdrive/share/eclipse_diffdrive/urdf/: eclipse_diffdrive.urdf.xacro
src/eclipse_diffdrive/install/eclipse_diffdrive/share/eclipse_diffdrive/worlds/: empty.world.sdf
src/eclipse_diffdrive/launch/: sim.launch.py
src/eclipse_diffdrive/log/: latest_build
src/eclipse_diffdrive/src/: drive_forward.py  pure_pursuit.py  turn_pid.py
src/eclipse_diffdrive/urdf/: eclipse_diffdrive.urdf  eclipse_diffdrive.urdf.xacro
